# ChangeLog for games-simulation/pmars-sdl
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-simulation/pmars-sdl/ChangeLog,v 1.9 2010/10/13 07:22:51 tupone Exp $

  13 Oct 2010; Tupone Alfredo <tupone@gentoo.org> pmars-sdl-0.9.2e.ebuild:
  Respect LDFLAGS. Bug #335540 by flameeyes@gentoo.org

  18 Nov 2008; Michael Sterrett <mr_bones_@gentoo.org>
  pmars-sdl-0.9.2e.ebuild:
  fix USE=-* case (bug #247469)

  09 Oct 2006; Tristan Heaven <nyhm@gentoo.org> pmars-sdl-0.9.2e.ebuild:
  Add modular X dependencies

  17 May 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  pmars-sdl-0.9.2e.ebuild:
  Cleanup for bug #92745.

  05 Jan 2005; Marcus Hanwell <cryos@gentoo.org> pmars-sdl-0.9.2e.ebuild:
  Marked ~amd64, closing bug 60145.

  01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org>
  pmars-sdl-0.9.2e.ebuild:
  virtual/glibc -> virtual/libc

  30 Mar 2004; David Holm <dholm@gentoo.org> pmars-sdl-0.9.2e.ebuild:
  Added to ~ppc.

*pmars-sdl-0.9.2e (30 Mar 2004)

  30 Mar 2004; Michael Sterrett <mr_bones_@gentoo.org> metadata.xml,
  pmars-sdl-0.9.2e.ebuild:
  initial commit; ebuild based on the one submitted by Andreas Scholta via bug
  #40738
