@@ -1,6 +1,10 @@
 # ChangeLog for games-simulation/pmars-sdl
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-simulation/pmars-sdl/ChangeLog,v 1.9 2010/10/13 07:22:51 tupone Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-simulation/pmars-sdl/ChangeLog,v 1.10 2010/10/18 19:16:34 mr_bones_ Exp $
+
+  18 Oct 2010; Michael Sterrett <mr_bones_@gentoo.org>
+  pmars-sdl-0.9.2e.ebuild:
+  add libsdl use dep; drop direct svga support (use libsdl backend)
 
   13 Oct 2010; Tupone Alfredo <tupone@gentoo.org> pmars-sdl-0.9.2e.ebuild:
   Respect LDFLAGS. Bug #335540 by flameeyes@gentoo.org
